[정렬]국영수, 안테나 문제

--- a/Algorithm(Python)/Sort/Sort_practice.ipynb
+++ b/Algorithm(Python)/Sort/Sort_practice.ipynb
@@ -7,7 +7,7 @@
    },
    "source": [
     "<h1>Table of Contents<span class=\"tocSkip\"></span></h1>\n",
-    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#실전문제---성적이-낮은-순서로-학생-출력하기\" data-toc-modified-id=\"실전문제---성적이-낮은-순서로-학생-출력하기-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>실전문제 - 성적이 낮은 순서로 학생 출력하기</a></span></li><li><span><a href=\"#실전문제---두-배열의-원소-교체\" data-toc-modified-id=\"실전문제---두-배열의-원소-교체-2\"><span class=\"toc-item-num\">2&nbsp;&nbsp;</span>실전문제 - 두 배열의 원소 교체</a></span></li></ul></div>"
+    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#실전문제---성적이-낮은-순서로-학생-출력하기\" data-toc-modified-id=\"실전문제---성적이-낮은-순서로-학생-출력하기-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>실전문제 - 성적이 낮은 순서로 학생 출력하기</a></span></li><li><span><a href=\"#실전문제---두-배열의-원소-교체\" data-toc-modified-id=\"실전문제---두-배열의-원소-교체-2\"><span class=\"toc-item-num\">2&nbsp;&nbsp;</span>실전문제 - 두 배열의 원소 교체</a></span></li><li><span><a href=\"#기출문제-1번---안테나\" data-toc-modified-id=\"기출문제-1번---안테나-3\"><span class=\"toc-item-num\">3&nbsp;&nbsp;</span>기출문제 1번 - 안테나</a></span></li><li><span><a href=\"#기출문제-2번---안테나\" data-toc-modified-id=\"기출문제-2번---안테나-4\"><span class=\"toc-item-num\">4&nbsp;&nbsp;</span>기출문제 2번 - 안테나</a></span></li></ul></div>"
    ]
   },
   {
@@ -89,6 +89,118 @@
     "\n",
     "res = sum(a)\n",
     "print(res)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 기출문제 1번 - 안테나"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#### 내가 푼 풀이 #####\n",
+    "# lambda 함수를 통해 정렬 다중 조건을 넣을 수 있음\n",
+    "# -는 내림차순 정렬!\n",
+    "# ASCII  코드상 대문자는 소문자보다 작으므로 사전 순으로 앞에옴!(오름차순일 때 앞에온다는 의미)\n",
+    "N = int(input())\n",
+    "scores = []\n",
+    "for _ in range(N):\n",
+    "    name, kor, eng, math = input().split()\n",
+    "    scores.append((name, int(kor), int(eng), int(math)))\n",
+    "\n",
+    "sort_scores = sorted(scores, key=lambda x: (-x[1], x[2], -x[3], x[0]))\n",
+    "\n",
+    "for score in sort_scores:\n",
+    "    print(score[0])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 기출문제 2번 - 안테나\n",
+    "\n",
+    "- 데이터의 특징 패턴을 찾기\n",
+    "- **아이디어: 집 위치 값들 중 중간값에 해당하는 위치의 집에 안테나를 설치하면 그 중간값 위치의 안테나로부터 모든 집간의 거리가 최소가 됨!**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n",
+      "5 1 9 7\n",
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "#### 내가 푼 풀이 ##### -> 시간 20분 초과 ㅠㅠ\n",
+    "N = int(input())\n",
+    "homes = list(map(int, input().split()))\n",
+    "antenna = [0] * (max(homes) + 1)  # index가 안테나 위치 번호, value가 거리\n",
+    "\n",
+    "# 각 안테나마다 집들 간의 거리 계산\n",
+    "for i in range(1, len(antenna)):\n",
+    "    for j in range(len(homes)):\n",
+    "        antenna[i] += abs(i - homes[j])\n",
+    "        \n",
+    "# 안테나 번호와 메핑된 거리값들 zip 시키기\n",
+    "antenna_nums = [i for i in range(len(antenna))]\n",
+    "result = list(zip(antenna_nums, antenna))\n",
+    "\n",
+    "# 0번 인덱스를 제외하고 거리값을 기준으로 오름차순으로 정렬\n",
+    "sorted_result = sorted(result[1:], key=lambda x: x[1])\n",
+    "\n",
+    "# 정렬시킨 거리값중 첫 번째(최솟값)과 같은 값을 갖는 거리를 갖는 안테나 따로 담기\n",
+    "res = [x[0] for x in sorted_result if x[1] == sorted_result[0][1]]\n",
+    "\n",
+    "# 같은 값을 갖는 여러개 안테나 위치 중 가장 작은 값의 안테나 위치 출력\n",
+    "print(min(res))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n",
+      "1 2 3 5 8 9\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "#### 해설 풀이 #####\n",
+    "N = int(input())\n",
+    "antenna = list(map(int, input().split()))\n",
+    "antenna.sort()\n",
+    "\n",
+    "# 최소 안테나 위치 값이 여러개일 경우 가장 작은 값을 출력 -> 중앙값으로 해결 됨!\n",
+    "# index는 0부터 시작한다는 것 참고!\n",
+    "'''\n",
+    "if) 데이터 개수가 6개 일때,\n",
+    "[FLOOR] : (6-1)//2 = 2 -> 2번 index -> 결국 3번째 값을 의미\n",
+    "[CEIL] : (6-1)//2 + 1 = 3 -> 3번 index -> 결국 4번째 값을 의미\n",
+    "--> 하지만 문제상에서 가장 작은 안테나 위치만을 출력하라고 했으므로 [FLOOR] 방식을 선택하면 된다!\n",
+    "\n",
+    "'''\n",
+    "print(antenna[(N-1)//2])"
    ]
   },
   {
