[구현] - 실패율

--- a/Algorithm(Python)/Sort/Sort_practice.ipynb
+++ b/Algorithm(Python)/Sort/Sort_practice.ipynb
@@ -7,7 +7,7 @@
    },
    "source": [
     "<h1>Table of Contents<span class=\"tocSkip\"></span></h1>\n",
-    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#실전문제---성적이-낮은-순서로-학생-출력하기\" data-toc-modified-id=\"실전문제---성적이-낮은-순서로-학생-출력하기-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>실전문제 - 성적이 낮은 순서로 학생 출력하기</a></span></li><li><span><a href=\"#실전문제---두-배열의-원소-교체\" data-toc-modified-id=\"실전문제---두-배열의-원소-교체-2\"><span class=\"toc-item-num\">2&nbsp;&nbsp;</span>실전문제 - 두 배열의 원소 교체</a></span></li><li><span><a href=\"#기출문제-1번---안테나\" data-toc-modified-id=\"기출문제-1번---안테나-3\"><span class=\"toc-item-num\">3&nbsp;&nbsp;</span>기출문제 1번 - 안테나</a></span></li><li><span><a href=\"#기출문제-2번---안테나\" data-toc-modified-id=\"기출문제-2번---안테나-4\"><span class=\"toc-item-num\">4&nbsp;&nbsp;</span>기출문제 2번 - 안테나</a></span></li></ul></div>"
+    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#실전문제---성적이-낮은-순서로-학생-출력하기\" data-toc-modified-id=\"실전문제---성적이-낮은-순서로-학생-출력하기-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>실전문제 - 성적이 낮은 순서로 학생 출력하기</a></span></li><li><span><a href=\"#실전문제---두-배열의-원소-교체\" data-toc-modified-id=\"실전문제---두-배열의-원소-교체-2\"><span class=\"toc-item-num\">2&nbsp;&nbsp;</span>실전문제 - 두 배열의 원소 교체</a></span></li><li><span><a href=\"#기출문제-1번---안테나\" data-toc-modified-id=\"기출문제-1번---안테나-3\"><span class=\"toc-item-num\">3&nbsp;&nbsp;</span>기출문제 1번 - 안테나</a></span></li><li><span><a href=\"#기출문제-2번---안테나\" data-toc-modified-id=\"기출문제-2번---안테나-4\"><span class=\"toc-item-num\">4&nbsp;&nbsp;</span>기출문제 2번 - 안테나</a></span></li><li><span><a href=\"#기출문제-3번---실패율\" data-toc-modified-id=\"기출문제-3번---실패율-5\"><span class=\"toc-item-num\">5&nbsp;&nbsp;</span>기출문제 3번 - 실패율</a></span></li></ul></div>"
    ]
   },
   {
@@ -201,6 +201,80 @@
     "\n",
     "'''\n",
     "print(antenna[(N-1)//2])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 기출문제 3번 - 실패율\n",
+    "- **Tuple을 사용하자!**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3, 4, 2, 1, 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "N = 5\n",
+    "stages = [2, 1, 2, 6, 2, 4, 3, 3]\n",
+    "\n",
+    "answer = []\n",
+    "length = len(stages)\n",
+    "\n",
+    "for i in range(1, N+1):\n",
+    "    # 특정 스테이지에 머물고 있는 플레이어 수(특정 스테이지 못깬 사람들) 세기\n",
+    "    count = stages.count(i)\n",
+    "\n",
+    "    # 만약 stages 배열 사이즈가 0이면 실패율은 그냥 0\n",
+    "    if length == 0:\n",
+    "        fail = 0\n",
+    "    else:\n",
+    "        fail = count / length\n",
+    "    # answer에 특정 스테이지(i)에서의 실패율 데이터 넣기\n",
+    "    answer.append((i, fail))\n",
+    "    # (중요!) 다음 스테이지 실패율 측정시 현재 스테이지에 머무는 사람 수 만큼 length에서 제외\n",
+    "    length -= count\n",
+    "# 실패율이 높은 스테이지부터 내림차순으로 정렬\n",
+    "answer = sorted(answer, key=lambda x: x[1], reverse=True)\n",
+    "# 실패율이 같으면 작은 번호의 스테이지로 오름 차순 -> 자동으로 정렬됨\n",
+    "answer = [i[0] for i in answer]\n",
+    "print(answer)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(N, stages):\n",
+    "    answer = []\n",
+    "    length = len(stages)\n",
+    "    \n",
+    "    for i in range(1, N+1):\n",
+    "        count = stages.count(i) # 특정 스테이지에 머무는 사람 수 세기\n",
+    "        \n",
+    "        # 숫자가 커지면 len(stages) 하면 런타임 에러 발생\n",
+    "        if length == 0:\n",
+    "            fail = 0\n",
+    "        else:\n",
+    "            fail = count / length\n",
+    "        answer.append((i, fail)) # 스테이지-실패율 데이터 넣기\n",
+    "        length -= count # 다음 스테이지 실패율 분모 재계산\n",
+    "    # 실패율 내림차순으로 정렬\n",
+    "    answer = sorted(answer, key=lambda x: x[1], reverse=True)\n",
+    "    answer = [i[0] for i in answer]\n",
+    "    return answer"
    ]
   },
   {
