--- a/Algorithm(Python)/Greedy/implementation_baekjoon.ipynb
+++ b/Algorithm(Python)/Greedy/implementation_baekjoon.ipynb
@@ -7,7 +7,7 @@
    },
    "source": [
     "<h1>Table of Contents<span class=\"tocSkip\"></span></h1>\n",
-    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#책-예제)-왕실의-나이트\" data-toc-modified-id=\"책-예제)-왕실의-나이트-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>책 예제) 왕실의 나이트</a></span></li><li><span><a href=\"#게임개발\" data-toc-modified-id=\"게임개발-2\"><span class=\"toc-item-num\">2&nbsp;&nbsp;</span>게임개발</a></span></li><li><span><a href=\"#1063번---킹\" data-toc-modified-id=\"1063번---킹-3\"><span class=\"toc-item-num\">3&nbsp;&nbsp;</span>1063번 - 킹</a></span></li><li><span><a href=\"#1292번---쉽게-푸는-문제\" data-toc-modified-id=\"1292번---쉽게-푸는-문제-4\"><span class=\"toc-item-num\">4&nbsp;&nbsp;</span>1292번 - 쉽게 푸는 문제</a></span></li><li><span><a href=\"#1316번---그룹-단어-체커\" data-toc-modified-id=\"1316번---그룹-단어-체커-5\"><span class=\"toc-item-num\">5&nbsp;&nbsp;</span>1316번 - 그룹 단어 체커</a></span></li><li><span><a href=\"#1380번---귀걸이\" data-toc-modified-id=\"1380번---귀걸이-6\"><span class=\"toc-item-num\">6&nbsp;&nbsp;</span>1380번 - 귀걸이</a></span></li><li><span><a href=\"#1475번---방-번호\" data-toc-modified-id=\"1475번---방-번호-7\"><span class=\"toc-item-num\">7&nbsp;&nbsp;</span>1475번 - 방 번호</a></span></li><li><span><a href=\"#1476번---날짜-계산\" data-toc-modified-id=\"1476번---날짜-계산-8\"><span class=\"toc-item-num\">8&nbsp;&nbsp;</span>1476번 - 날짜 계산</a></span></li><li><span><a href=\"#1531번---투명\" data-toc-modified-id=\"1531번---투명-9\"><span class=\"toc-item-num\">9&nbsp;&nbsp;</span>1531번 - 투명</a></span></li><li><span><a href=\"#1769번---3의-배수\" data-toc-modified-id=\"1769번---3의-배수-10\"><span class=\"toc-item-num\">10&nbsp;&nbsp;</span>1769번 - 3의 배수</a></span></li><li><span><a href=\"#1913번---달팽이\" data-toc-modified-id=\"1913번---달팽이-11\"><span class=\"toc-item-num\">11&nbsp;&nbsp;</span>1913번 - 달팽이</a></span></li><li><span><a href=\"#2303번---숫자게임\" data-toc-modified-id=\"2303번---숫자게임-12\"><span class=\"toc-item-num\">12&nbsp;&nbsp;</span>2303번 - 숫자게임</a></span></li><li><span><a href=\"#2477번---참외밭\" data-toc-modified-id=\"2477번---참외밭-13\"><span class=\"toc-item-num\">13&nbsp;&nbsp;</span>2477번 - 참외밭</a></span></li><li><span><a href=\"#2563번---색종이\" data-toc-modified-id=\"2563번---색종이-14\"><span class=\"toc-item-num\">14&nbsp;&nbsp;</span>2563번 - 색종이</a></span></li></ul></div>"
+    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#책-예제)-왕실의-나이트\" data-toc-modified-id=\"책-예제)-왕실의-나이트-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>책 예제) 왕실의 나이트</a></span></li><li><span><a href=\"#게임개발\" data-toc-modified-id=\"게임개발-2\"><span class=\"toc-item-num\">2&nbsp;&nbsp;</span>게임개발</a></span></li><li><span><a href=\"#1063번---킹\" data-toc-modified-id=\"1063번---킹-3\"><span class=\"toc-item-num\">3&nbsp;&nbsp;</span>1063번 - 킹</a></span></li><li><span><a href=\"#1292번---쉽게-푸는-문제\" data-toc-modified-id=\"1292번---쉽게-푸는-문제-4\"><span class=\"toc-item-num\">4&nbsp;&nbsp;</span>1292번 - 쉽게 푸는 문제</a></span></li><li><span><a href=\"#1316번---그룹-단어-체커\" data-toc-modified-id=\"1316번---그룹-단어-체커-5\"><span class=\"toc-item-num\">5&nbsp;&nbsp;</span>1316번 - 그룹 단어 체커</a></span></li><li><span><a href=\"#1380번---귀걸이\" data-toc-modified-id=\"1380번---귀걸이-6\"><span class=\"toc-item-num\">6&nbsp;&nbsp;</span>1380번 - 귀걸이</a></span></li><li><span><a href=\"#1475번---방-번호\" data-toc-modified-id=\"1475번---방-번호-7\"><span class=\"toc-item-num\">7&nbsp;&nbsp;</span>1475번 - 방 번호</a></span></li><li><span><a href=\"#1476번---날짜-계산\" data-toc-modified-id=\"1476번---날짜-계산-8\"><span class=\"toc-item-num\">8&nbsp;&nbsp;</span>1476번 - 날짜 계산</a></span></li><li><span><a href=\"#1531번---투명\" data-toc-modified-id=\"1531번---투명-9\"><span class=\"toc-item-num\">9&nbsp;&nbsp;</span>1531번 - 투명</a></span></li><li><span><a href=\"#1769번---3의-배수\" data-toc-modified-id=\"1769번---3의-배수-10\"><span class=\"toc-item-num\">10&nbsp;&nbsp;</span>1769번 - 3의 배수</a></span></li><li><span><a href=\"#1913번---달팽이\" data-toc-modified-id=\"1913번---달팽이-11\"><span class=\"toc-item-num\">11&nbsp;&nbsp;</span>1913번 - 달팽이</a></span></li><li><span><a href=\"#2303번---숫자게임\" data-toc-modified-id=\"2303번---숫자게임-12\"><span class=\"toc-item-num\">12&nbsp;&nbsp;</span>2303번 - 숫자게임</a></span></li><li><span><a href=\"#2477번---참외밭\" data-toc-modified-id=\"2477번---참외밭-13\"><span class=\"toc-item-num\">13&nbsp;&nbsp;</span>2477번 - 참외밭</a></span></li><li><span><a href=\"#2563번---색종이\" data-toc-modified-id=\"2563번---색종이-14\"><span class=\"toc-item-num\">14&nbsp;&nbsp;</span>2563번 - 색종이</a></span></li><li><span><a href=\"#기출문제1---모험가-길드\" data-toc-modified-id=\"기출문제1---모험가-길드-15\"><span class=\"toc-item-num\">15&nbsp;&nbsp;</span>기출문제1 - 모험가 길드</a></span></li></ul></div>"
    ]
   },
   {
@@ -687,6 +687,105 @@
     "            count += 1\n",
     "print(count)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 기출문제1 - 모험가 길드\n",
+    "\n",
+    "- **Idea: 현재 그룹에 포함된 모험가 수 >= 현재 확인하고 있는 공포도 --> 만족 시 그룹 형성 가능!**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## 내가 푼 풀이 ## -> 수가 커지면 런타임 에러날 것 같음..\n",
+    "N = int(input())\n",
+    "phobia = list(map(int, input().split()))\n",
+    "set_phobia = list(set(phobia)) # distinct한 공포도\n",
+    "group = 0\n",
+    "\n",
+    "for set_p in set_phobia: # distinct한 공포도 하나씩 loop\n",
+    "    cnt = phobia.count(set_p) # distinct한 공포도 count\n",
+    "    group_cnt = cnt // set_p # count를 공포도로 나눈 몫이 그룹으로 형성될 count\n",
+    "    group += group_cnt\n",
+    "\n",
+    "print(group)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "2 3 1 2 2\n",
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "## 정석 풀이 ##\n",
+    "N = int(input())\n",
+    "phobia = list(map(int, input().split()))\n",
+    "\n",
+    "result = 0  # 형성되는 그룹 count\n",
+    "count = 0   # 현재 그룹에 포함되는 모험가 수\n",
+    "\n",
+    "for i in phobia:\n",
+    "    count += 1  # 현재 그룹에 포함되는 모험가 수 +1 하기\n",
+    "    if count >= i:\n",
+    "        result += 1  # 그룹 형성 +1\n",
+    "        count = 0    # 다음 그룹을 형성하기 위해 모험가 수 count 초기화\n",
+    "        \n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "!source activate venvforpython\n",
+    "import numpy as np\n",
+    "\n",
+    "phobia = np.random.randint(low=1, high=10000, size=10000)\n",
+    "phobia = phobia.tolist()\n",
+    "set_phobia = list(set(phobia))\n",
+    "group = 0\n",
+    "\n",
+    "for set_p in set_phobia:\n",
+    "    cnt = phobia.count(set_p)\n",
+    "    print(cnt)\n",
+    "    group_cnt = cnt // set_p\n",
+    "    group += group_cnt\n",
+    "\n",
+    "print(group)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -706,7 +805,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.7.6"
   },
   "toc": {
    "base_numbering": 1,
