[구현]기출문제-럭키스트레이트/문자열재정렬/문자열압축 문제

--- a/Algorithm(Python)/Greedy/implementation_baekjoon.ipynb
+++ b/Algorithm(Python)/Greedy/implementation_baekjoon.ipynb
@@ -7,7 +7,7 @@
    },
    "source": [
     "<h1>Table of Contents<span class=\"tocSkip\"></span></h1>\n",
-    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#책-예제)-왕실의-나이트\" data-toc-modified-id=\"책-예제)-왕실의-나이트-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>책 예제) 왕실의 나이트</a></span></li><li><span><a href=\"#게임개발\" data-toc-modified-id=\"게임개발-2\"><span class=\"toc-item-num\">2&nbsp;&nbsp;</span>게임개발</a></span></li><li><span><a href=\"#1063번---킹\" data-toc-modified-id=\"1063번---킹-3\"><span class=\"toc-item-num\">3&nbsp;&nbsp;</span>1063번 - 킹</a></span></li><li><span><a href=\"#1292번---쉽게-푸는-문제\" data-toc-modified-id=\"1292번---쉽게-푸는-문제-4\"><span class=\"toc-item-num\">4&nbsp;&nbsp;</span>1292번 - 쉽게 푸는 문제</a></span></li><li><span><a href=\"#1316번---그룹-단어-체커\" data-toc-modified-id=\"1316번---그룹-단어-체커-5\"><span class=\"toc-item-num\">5&nbsp;&nbsp;</span>1316번 - 그룹 단어 체커</a></span></li><li><span><a href=\"#1380번---귀걸이\" data-toc-modified-id=\"1380번---귀걸이-6\"><span class=\"toc-item-num\">6&nbsp;&nbsp;</span>1380번 - 귀걸이</a></span></li><li><span><a href=\"#1475번---방-번호\" data-toc-modified-id=\"1475번---방-번호-7\"><span class=\"toc-item-num\">7&nbsp;&nbsp;</span>1475번 - 방 번호</a></span></li><li><span><a href=\"#1476번---날짜-계산\" data-toc-modified-id=\"1476번---날짜-계산-8\"><span class=\"toc-item-num\">8&nbsp;&nbsp;</span>1476번 - 날짜 계산</a></span></li><li><span><a href=\"#1531번---투명\" data-toc-modified-id=\"1531번---투명-9\"><span class=\"toc-item-num\">9&nbsp;&nbsp;</span>1531번 - 투명</a></span></li><li><span><a href=\"#1769번---3의-배수\" data-toc-modified-id=\"1769번---3의-배수-10\"><span class=\"toc-item-num\">10&nbsp;&nbsp;</span>1769번 - 3의 배수</a></span></li><li><span><a href=\"#1913번---달팽이\" data-toc-modified-id=\"1913번---달팽이-11\"><span class=\"toc-item-num\">11&nbsp;&nbsp;</span>1913번 - 달팽이</a></span></li><li><span><a href=\"#2303번---숫자게임\" data-toc-modified-id=\"2303번---숫자게임-12\"><span class=\"toc-item-num\">12&nbsp;&nbsp;</span>2303번 - 숫자게임</a></span></li><li><span><a href=\"#2477번---참외밭\" data-toc-modified-id=\"2477번---참외밭-13\"><span class=\"toc-item-num\">13&nbsp;&nbsp;</span>2477번 - 참외밭</a></span></li><li><span><a href=\"#2563번---색종이\" data-toc-modified-id=\"2563번---색종이-14\"><span class=\"toc-item-num\">14&nbsp;&nbsp;</span>2563번 - 색종이</a></span></li><li><span><a href=\"#기출문제1---모험가-길드\" data-toc-modified-id=\"기출문제1---모험가-길드-15\"><span class=\"toc-item-num\">15&nbsp;&nbsp;</span>기출문제1 - 모험가 길드</a></span></li></ul></div>"
+    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#책-예제)-왕실의-나이트\" data-toc-modified-id=\"책-예제)-왕실의-나이트-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>책 예제) 왕실의 나이트</a></span></li><li><span><a href=\"#게임개발\" data-toc-modified-id=\"게임개발-2\"><span class=\"toc-item-num\">2&nbsp;&nbsp;</span>게임개발</a></span></li><li><span><a href=\"#1063번---킹\" data-toc-modified-id=\"1063번---킹-3\"><span class=\"toc-item-num\">3&nbsp;&nbsp;</span>1063번 - 킹</a></span></li><li><span><a href=\"#1292번---쉽게-푸는-문제\" data-toc-modified-id=\"1292번---쉽게-푸는-문제-4\"><span class=\"toc-item-num\">4&nbsp;&nbsp;</span>1292번 - 쉽게 푸는 문제</a></span></li><li><span><a href=\"#1316번---그룹-단어-체커\" data-toc-modified-id=\"1316번---그룹-단어-체커-5\"><span class=\"toc-item-num\">5&nbsp;&nbsp;</span>1316번 - 그룹 단어 체커</a></span></li><li><span><a href=\"#1380번---귀걸이\" data-toc-modified-id=\"1380번---귀걸이-6\"><span class=\"toc-item-num\">6&nbsp;&nbsp;</span>1380번 - 귀걸이</a></span></li><li><span><a href=\"#1475번---방-번호\" data-toc-modified-id=\"1475번---방-번호-7\"><span class=\"toc-item-num\">7&nbsp;&nbsp;</span>1475번 - 방 번호</a></span></li><li><span><a href=\"#1476번---날짜-계산\" data-toc-modified-id=\"1476번---날짜-계산-8\"><span class=\"toc-item-num\">8&nbsp;&nbsp;</span>1476번 - 날짜 계산</a></span></li><li><span><a href=\"#1531번---투명\" data-toc-modified-id=\"1531번---투명-9\"><span class=\"toc-item-num\">9&nbsp;&nbsp;</span>1531번 - 투명</a></span></li><li><span><a href=\"#1769번---3의-배수\" data-toc-modified-id=\"1769번---3의-배수-10\"><span class=\"toc-item-num\">10&nbsp;&nbsp;</span>1769번 - 3의 배수</a></span></li><li><span><a href=\"#1913번---달팽이\" data-toc-modified-id=\"1913번---달팽이-11\"><span class=\"toc-item-num\">11&nbsp;&nbsp;</span>1913번 - 달팽이</a></span></li><li><span><a href=\"#2303번---숫자게임\" data-toc-modified-id=\"2303번---숫자게임-12\"><span class=\"toc-item-num\">12&nbsp;&nbsp;</span>2303번 - 숫자게임</a></span></li><li><span><a href=\"#2477번---참외밭\" data-toc-modified-id=\"2477번---참외밭-13\"><span class=\"toc-item-num\">13&nbsp;&nbsp;</span>2477번 - 참외밭</a></span></li><li><span><a href=\"#2563번---색종이\" data-toc-modified-id=\"2563번---색종이-14\"><span class=\"toc-item-num\">14&nbsp;&nbsp;</span>2563번 - 색종이</a></span></li><li><span><a href=\"#[그리디]기출문제1---모험가-길드\" data-toc-modified-id=\"[그리디]기출문제1---모험가-길드-15\"><span class=\"toc-item-num\">15&nbsp;&nbsp;</span>[그리디]기출문제1 - 모험가 길드</a></span></li><li><span><a href=\"#[구현]-기출문제1---럭키-스트레이트\" data-toc-modified-id=\"[구현]-기출문제1---럭키-스트레이트-16\"><span class=\"toc-item-num\">16&nbsp;&nbsp;</span>[구현] 기출문제1 - 럭키 스트레이트</a></span></li><li><span><a href=\"#[구현]-기출문제2---문자열-재정렬\" data-toc-modified-id=\"[구현]-기출문제2---문자열-재정렬-17\"><span class=\"toc-item-num\">17&nbsp;&nbsp;</span>[구현] 기출문제2 - 문자열 재정렬</a></span></li><li><span><a href=\"#[구현]-기출문제3---문자열-압축\" data-toc-modified-id=\"[구현]-기출문제3---문자열-압축-18\"><span class=\"toc-item-num\">18&nbsp;&nbsp;</span>[구현] 기출문제3 - 문자열 압축</a></span></li></ul></div>"
    ]
   },
   {
@@ -692,7 +692,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 기출문제1 - 모험가 길드\n",
+    "### [그리디]기출문제1 - 모험가 길드\n",
     "\n",
     "- **Idea: 현재 그룹에 포함된 모험가 수 >= 현재 확인하고 있는 공포도 --> 만족 시 그룹 형성 가능!**"
    ]
@@ -778,6 +778,222 @@
     "    group += group_cnt\n",
     "\n",
     "print(group)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### [구현] 기출문제1 - 럭키 스트레이트"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "545233\n",
+      "READY\n"
+     ]
+    }
+   ],
+   "source": [
+    "### 내가 푼 풀이 ###\n",
+    "N = input()\n",
+    "half = len(N) // 2\n",
+    "left = [int(n) for n in N[:half]]\n",
+    "right = [int(n) for n in N[half:]]\n",
+    "\n",
+    "if sum(left) == sum(right):\n",
+    "    print('LUCKY')\n",
+    "else:\n",
+    "    print('READY')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "545223\n",
+      "READY\n"
+     ]
+    }
+   ],
+   "source": [
+    "### 책의 정석 풀이 ###\n",
+    "N = input()\n",
+    "length = len(N)\n",
+    "summary = 0\n",
+    "\n",
+    "for i in range(0, length//2):\n",
+    "    summary += int(N[i])\n",
+    "\n",
+    "for i in range(length//2, length):\n",
+    "    summary -= int(N[i])\n",
+    "    \n",
+    "if summary == 0:\n",
+    "    print('LUCKY')\n",
+    "else:\n",
+    "    print('READY')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### [구현] 기출문제2 - 문자열 재정렬\n",
+    "\n",
+    "- 문자열로 구성되어있는지 확인하는 방법의 메소드로 ``.isalpha()``가 있음!! 이를 애용하도록 하자!\n",
+    "    * 반대로 숫자만으로 구성되어있는지를 확인하는 ``.isdigit()``도 있음!\n",
+    "    * ``isalnum()`` : 문자또는 숫자로 구성되어있으면 True, 공백 포함되어 있으면 False\n",
+    "    * ``isspace()`` : 공백이 하나라도 있으면 True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ABDASD\n",
+      "AABDDS\n"
+     ]
+    }
+   ],
+   "source": [
+    "### 내 풀이 ###\n",
+    "S = input()\n",
+    "alphabet = []\n",
+    "number = 0\n",
+    "\n",
+    "for s in S:\n",
+    "    if 65 <= ord(s) <= 90:\n",
+    "        alphabet.append(s)\n",
+    "    else:\n",
+    "        number += int(s)\n",
+    "alphabet = sorted(alphabet)\n",
+    "\n",
+    "# 틀린 부분!!! => 문자열에 숫자가 주어지지 않을 경우를 고려해야 함!\n",
+    "if number != 0:\n",
+    "    alphabet.append(str(number))\n",
+    "\n",
+    "print(''.join(alphabet))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ABDASD\n",
+      "AABDDS\n"
+     ]
+    }
+   ],
+   "source": [
+    "### 정석 풀이 ###\n",
+    "S = input()\n",
+    "alphabet = []\n",
+    "number = 0\n",
+    "\n",
+    "for s in S:\n",
+    "    if s.isalpha():\n",
+    "        alphabet.append(s)\n",
+    "    else:\n",
+    "        number += int(s)\n",
+    "alphabet.sort()\n",
+    "\n",
+    "if number != 0:\n",
+    "    alphabet.append(str(number))\n",
+    "\n",
+    "print(''.join(alphabet))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### [구현] 기출문제3 - 문자열 압축\n",
+    "\n",
+    "- 카카오 문제 매우 어렵다..하핳"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### 책 정석 풀이 ###\n",
+    "s = input()\n",
+    "answer = len(s)  # 압축하지 않은 native한 문자열 길이\n",
+    "\n",
+    "# 1개 단위부터 (N//2)개 단위까지 압축 시도 -> 이 때 왜 N//2냐? ex. N=12개면 N//2는 6으로 6개 단위로 2개 압축가능. but 7개/5개 압축은 그냥 압축시키지 않은 결과랑 동일하게 된다. 의미가 없어짐..\n",
+    "for step in range(1, (len(s)//2)+1):\n",
+    "    compressed = \"\"   # 압축시켜 기록할 문자열\n",
+    "    prev = s[0:step]  # 맨 처음 압축하는 문자열 step 단위로 확인\n",
+    "    count = 1         # 반복되는 문자열 셀 count -> prev가 등장한 것만으로도 count +1 쳐야함!\n",
+    "    # 압축한 문자열이 다음 step 단위의 문자열과 반복되는지 확인 -> $ 3번째 스텝인자를 넣어주면 len(s)끝까지 도달하지 않을 경우에 남은 len(s)까지 남은 문자열이 존재\n",
+    "    for j in range(step, len(s), step):\n",
+    "        # 만약 prev가 next와 동일한 문자열이면 압축\n",
+    "        if prev == s[j:j+step]:\n",
+    "            count += 1\n",
+    "        # 만약 동일한 문자열 아니면 compressed 문자열에다가 기록\n",
+    "        else:\n",
+    "            compressed += str(count) + prev if count >= 2 else prev\n",
+    "            prev = s[j:j+step]  # 동일한 문자열 확인하는 기준이 되는 prev 재설정\n",
+    "            count = 1           # 카운트도 초기화\n",
+    "    # inner loop문에서 '$'부분에 대한 나머지 문자열을 처리\n",
+    "    compressed += str(count) + prev if count >=2 else prev\n",
+    "    answer = min(answer, len(compressed))\n",
+    "\n",
+    "print(answer)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### 함수 상태로 연습 ###\n",
+    "def solution(s):\n",
+    "    answer = len(s)  # 압축하지 않은 상태의 문자열 길이\n",
+    "    # step 단위 만큼 압축 시도 시작\n",
+    "    for step in range(1, len(s)//2+1):\n",
+    "        compressed = ''  # 압축한 문자열 기록\n",
+    "        prev = s[0:step] # 압축 시작 후 첫 번째 문자열\n",
+    "        count = 1\n",
+    "        # 첫 번째 문자열 이후로 step 단위 만큼 이동해서 동일한 문자열 여부 확인\n",
+    "        for j in range(step, len(s), step):\n",
+    "            if prev == s[j:j+step]:\n",
+    "                count += 1\n",
+    "            else:\n",
+    "                compressed += str(count) + prev if count >= 2 else prev\n",
+    "                prev = s[j:j+step]\n",
+    "                count = 1\n",
+    "        # step단위로 수행후 len(s)끝까지 도달하지 않은 문자열들 처리하기\n",
+    "        compressed += str(count) + prev if count >= 2 else prev\n",
+    "        # 최소 문자열 길이 측정\n",
+    "        answer = min(answer, len(compressed))\n",
+    "    \n",
+    "    return answer"
    ]
   },
   {
