[BFS] 특정 거리 도시 찾기, [구현]틀린문제 다시 풀이

--- a/Algorithm(Python)/Greedy/implementation_baekjoon.ipynb
+++ b/Algorithm(Python)/Greedy/implementation_baekjoon.ipynb
@@ -998,6 +998,37 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### 연습 2번째 ###\n",
+    "def solution(s):\n",
+    "    answer = len(s) # 압축하지 않은 초기 문자열 길이\n",
+    "    # 문자열 압축 단위 하나씩 시도\n",
+    "    for step in range(1, len(s)//2+1):\n",
+    "        compressed = \"\" # 압축한 문자열 기록\n",
+    "        # previous 문자열\n",
+    "        prev = s[0:step]\n",
+    "        # previous 문자열 나타났으니 count\n",
+    "        count = 1\n",
+    "        # previous 문자열이 반복되는지 아닌지 살펴보기\n",
+    "        for i in range(step, len(s), step):\n",
+    "            if prev == s[i:i+step]:\n",
+    "                count += 1\n",
+    "            else:\n",
+    "                compressed += str(count) + prev if count >= 2 else prev\n",
+    "                count = 1 # count 초기화\n",
+    "                prev = s[i:i+step]  # 반복되지 않는 문자열 나머지 prev에 재할당!\n",
+    "        # 특정 step만큼 압축시도를 하고 난 후 나머지 문자열 붙이기\n",
+    "        compressed += str(count) + prev if count >= 2 else prev\n",
+    "        answer = min(answer, len(compressed))\n",
+    "        \n",
+    "    return answer"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
