--- a/Algorithm(Python)/BFS_DFS/BFS.ipynb
+++ b/Algorithm(Python)/BFS_DFS/BFS.ipynb
@@ -7,7 +7,7 @@
    },
    "source": [
     "<h1>Table of Contents<span class=\"tocSkip\"></span></h1>\n",
-    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#16956번---늑대와-양\" data-toc-modified-id=\"16956번---늑대와-양-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>16956번 - 늑대와 양</a></span></li></ul></div>"
+    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#16956번---늑대와-양\" data-toc-modified-id=\"16956번---늑대와-양-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>16956번 - 늑대와 양</a></span></li><li><span><a href=\"#기출문제1---특정-거리의-도시-찾기\" data-toc-modified-id=\"기출문제1---특정-거리의-도시-찾기-2\"><span class=\"toc-item-num\">2&nbsp;&nbsp;</span>기출문제1 - 특정 거리의 도시 찾기</a></span></li></ul></div>"
    ]
   },
   {
@@ -108,6 +108,131 @@
     "    for line in matrix:\n",
     "        print(\"\".join(line))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 기출문제1 - 특정 거리의 도시 찾기\n",
+    "\n",
+    "- **간선의 비용이 모두 동일할 때는 BFS 사용 즉, deque를 사용하자!**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4 4 2 1\n",
+      "1 2\n",
+      "1 3\n",
+      "3 4\n",
+      "2 3\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "### 책 정석 풀이 ###\n",
+    "from collections import deque\n",
+    "\n",
+    "n, m, k, x = map(int, input().split())\n",
+    "graph = [[] for _ in range(n+1)]  # 0번 도시 그냥 추가 -> 나중에 인덱스 출력시 헷갈리지 않게 하기 위해..\n",
+    "\n",
+    "# 데이터 정보 인접 리스트 방식으로 입력\n",
+    "for _ in range(m):\n",
+    "    a, b = map(int, input().split())\n",
+    "    graph[a].append(b)\n",
+    "\n",
+    "distance = [-1] * (n+1)  # 모든 도시에 대한 최단 거리 계산\n",
+    "distance[x] = 0          # 출발 도시 최단거리 0으로 설정\n",
+    "\n",
+    "# BFS 시작\n",
+    "q = deque([x])  # 도시 담을 큐 자료구조 정의\n",
+    "while q:\n",
+    "    now = q.popleft()  # 현재 도시 추출\n",
+    "    # 인접 리스트 정보 활용\n",
+    "    for next_node in graph[now]:\n",
+    "        # 인접 노드가 방문을 안했다면 방문처리하면서 최단거리 계산\n",
+    "        if distance[next_node] == -1:\n",
+    "            distance[next_node] = distance[now] + 1  # 거리계산할 때 현재 도시까지의 최단거리에 +1해주어야 함!\n",
+    "            q.append(next_node)   # 큐에 인접노드 추가!\n",
+    "\n",
+    "check = False\n",
+    "for i in range(1, n+1):\n",
+    "    if distance[i] == k:\n",
+    "        print(i)  # 어차피 distance인덱스는 오름차순으로 정렬되어 있기 때문에 따로 정렬 수행 안해도 됨!\n",
+    "        check = True\n",
+    "if not check:\n",
+    "    print(-1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4 4 2 1\n",
+      "1 2\n",
+      "1 3\n",
+      "2 3\n",
+      "2 4\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "from collections import deque\n",
+    "\n",
+    "n, m, k, x = map(int, input().split())\n",
+    "# 데이터 인접 리스트 방식으로 담기\n",
+    "graph = [[] for _ in range(n+1)]\n",
+    "for _ in range(m):\n",
+    "    a, b = map(int, input().split())\n",
+    "    graph[a].append(b)\n",
+    "    \n",
+    "# 각 도시마다 최단거리 계산할 리스트 정의\n",
+    "distance = [-1] * (n+1)  # -1로 하는 이유는 출발 도시에서 출발도시까지 거리가 0이기 떄문에 눈에띄게 해주기 위함..?\n",
+    "# 출발 도시에 거리 계산 적용\n",
+    "distance[x] = 0\n",
+    "\n",
+    "# BFS 탐색 시작! deque 이용!\n",
+    "q = deque([x])  # 큐에다가 출발 도시 x 포함에서 거쳐가는 도시 담기\n",
+    "while q:\n",
+    "    now = q.popleft()\n",
+    "    for next in graph[now]:\n",
+    "        if distance[next] == -1:  # -1값 = 거쳐가지 않았다는 뜻! 즉, 방문하지 않은 노드\n",
+    "            # 최단거리 계산\n",
+    "            distance[next] = distance[now] + 1  # 최단거리는 이전 도시까지의 거리 + 1(도로 하나당 거리 1이기 떄문)\n",
+    "            # 이동한 도시 큐에 넣기\n",
+    "            q.append(next)\n",
+    "            \n",
+    "# distance값이 k인 도착도시들 출력하기\n",
+    "flag = False\n",
+    "for i in range(1, n+1):  # 도시가 1부터 n까지이기 때문에 distance 인덱스가 0인 값 볼 필요 없음\n",
+    "    if distance[i] == k:\n",
+    "        print(i)\n",
+    "        flag = True\n",
+    "        \n",
+    "# flag가 여전히 False면 최단거리 도시 없음\n",
+    "if not flag:\n",
+    "    print(-1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
