[구현,그리디]틀린문제 다시풀이

--- a/Algorithm(Python)/BFS_DFS/BFS.ipynb
+++ b/Algorithm(Python)/BFS_DFS/BFS.ipynb
@@ -115,7 +115,8 @@
    "source": [
     "### 기출문제1 - 특정 거리의 도시 찾기\n",
     "\n",
-    "- **간선의 비용이 모두 동일할 때는 BFS 사용 즉, deque를 사용하자!**"
+    "- **간선의 비용이 모두 동일할 때는 BFS 사용 즉, deque를 사용하자!**\n",
+    "- **최단거리** 문제 구하는 거 p.154쪽의 미로문제와 유사 유형!"
    ]
   },
   {
