--- a/Algorithm(Python)/Greedy/implementation_baekjoon.ipynb
+++ b/Algorithm(Python)/Greedy/implementation_baekjoon.ipynb
@@ -1032,6 +1032,94 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "def solution(s):\n",
+    "    answer = len(s)\n",
+    "    for step in range(1, len(s)//2+1):\n",
+    "        compressed = \"\"  # 압축 시킨 문자열 기록할 string\n",
+    "        prev = s[0:step]  # step마다 압축시킬 첫 번째 문자열\n",
+    "        count = 1\n",
+    "        # 이제 위 prev가 계속 반복되는지 step마다 보면서 확인\n",
+    "        # (중요!)참고로 리스트(문자열) 슬라이싱 할당할 때 슬라이싱 번호가 리스트(문자열)길이 넘어가도 그냥 끝 값만 반환하고 에러발생 안 함!\n",
+    "        for i in range(step, len(s), step):\n",
+    "            if prev == s[i:i+step]:\n",
+    "                count += 1\n",
+    "            else:\n",
+    "                compressed += str(count) + prev if count >= 2 else prev\n",
+    "                count = 1\n",
+    "                prev = s[i:i+step]\n",
+    "        compressed += str(count) + prev if count >= 2 else prev\n",
+    "        answer = min(answer, len(compressed))\n",
+    "        \n",
+    "    return answer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3 6\n",
+      "abc\n",
+      "--------------------------------------------------\n",
+      "6 9\n",
+      "ded\n",
+      "--------------------------------------------------\n",
+      "9 12\n",
+      "e\n",
+      "--------------------------------------------------\n"
+     ]
+    }
+   ],
+   "source": [
+    "step = 3\n",
+    "s = 'abcabcdede'\n",
+    "for i in range(step, len(s), step):\n",
+    "    print(i, i+step)\n",
+    "    print(s[i:i+step])\n",
+    "    print('-'*50)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3 6\n",
+      "['a', 'b', 'c']\n",
+      "--------------------------------------------------\n",
+      "6 9\n",
+      "['d', 'e', 'd']\n",
+      "--------------------------------------------------\n",
+      "9 12\n",
+      "['e']\n",
+      "--------------------------------------------------\n"
+     ]
+    }
+   ],
+   "source": [
+    "step = 3\n",
+    "s = 'abcabcdede'\n",
+    "s = [x for x in s]\n",
+    "for i in range(step, len(s), step):\n",
+    "    print(i, i+step)\n",
+    "    print(s[i:i+step])\n",
+    "    print('-'*50)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
