[DP]개미전사 문제, 이슈에질문

--- a/Algorithm(Python)/DynamicProgramming/DP_practice.ipynb
+++ b/Algorithm(Python)/DynamicProgramming/DP_practice.ipynb
@@ -7,7 +7,7 @@
    },
    "source": [
     "<h1>Table of Contents<span class=\"tocSkip\"></span></h1>\n",
-    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#실전문제---1로-만들기\" data-toc-modified-id=\"실전문제---1로-만들기-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>실전문제 - 1로 만들기</a></span></li></ul></div>"
+    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#실전문제---1로-만들기\" data-toc-modified-id=\"실전문제---1로-만들기-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>실전문제 - 1로 만들기</a></span></li><li><span><a href=\"#실전문제---개미-전사\" data-toc-modified-id=\"실전문제---개미-전사-2\"><span class=\"toc-item-num\">2&nbsp;&nbsp;</span>실전문제 - 개미 전사</a></span></li></ul></div>"
    ]
   },
   {
@@ -52,11 +52,52 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 실전문제 - 개미 전사"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "### 깃헙 이슈에 질문한 풀이 ###\n",
+    "\n",
+    "n = int(input())\n",
+    "array = list(map(int, input().split()))\n",
+    "d = [0] * 100\n",
+    "# array의 0,1번째 인덱스의 값인 1번째, 2번째 창고 DP 테이블에 기록\n",
+    "d[0] = array[0]\n",
+    "d[1] = array[1]\n",
+    "\n",
+    "for i in range(2, n):\n",
+    "    d[i] = max(array[i] + d[i-2], d[i-1])\n",
+    "\n",
+    "print(d[n-1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### 교재 정답 ###\n",
+    "n = int(input())\n",
+    "array = list(map(int, input().split()))\n",
+    "d = [0] * 100\n",
+    "# array의 0,1번째 인덱스의 값인 1번째, 2번째 창고 DP 테이블에 기록\n",
+    "d[0] = array[0]\n",
+    "d[1] = max(array[0], array[1])  # why??\n",
+    "\n",
+    "for i in range(2, n):\n",
+    "    d[i] = max(array[i] + d[i-2], d[i-1])\n",
+    "\n",
+    "print(d[n-1])"
+   ]
   }
  ],
  "metadata": {
