--- a/Algorithm(Python)/DynamicProgramming/DP_practice.ipynb
+++ b/Algorithm(Python)/DynamicProgramming/DP_practice.ipynb
@@ -7,7 +7,7 @@
    },
    "source": [
     "<h1>Table of Contents<span class=\"tocSkip\"></span></h1>\n",
-    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#실전문제---1로-만들기\" data-toc-modified-id=\"실전문제---1로-만들기-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>실전문제 - 1로 만들기</a></span></li><li><span><a href=\"#실전문제---개미-전사\" data-toc-modified-id=\"실전문제---개미-전사-2\"><span class=\"toc-item-num\">2&nbsp;&nbsp;</span>실전문제 - 개미 전사</a></span></li></ul></div>"
+    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#실전문제---1로-만들기\" data-toc-modified-id=\"실전문제---1로-만들기-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>실전문제 - 1로 만들기</a></span></li><li><span><a href=\"#실전문제---개미-전사\" data-toc-modified-id=\"실전문제---개미-전사-2\"><span class=\"toc-item-num\">2&nbsp;&nbsp;</span>실전문제 - 개미 전사</a></span></li><li><span><a href=\"#실전문제---바닥-공사\" data-toc-modified-id=\"실전문제---바닥-공사-3\"><span class=\"toc-item-num\">3&nbsp;&nbsp;</span>실전문제 - 바닥 공사</a></span></li></ul></div>"
    ]
   },
   {
@@ -98,6 +98,48 @@
     "\n",
     "print(d[n-1])"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 실전문제 - 바닥 공사"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "54\n",
+      "12419\n"
+     ]
+    }
+   ],
+   "source": [
+    "### 교재 정답 ###\n",
+    "n = int(input())\n",
+    "d = [0] * 1001\n",
+    "d[1] = 1\n",
+    "d[2] = 3\n",
+    "\n",
+    "# DP의 전형적인 풀이방법 -> Bottom-Up = 이미 다 채워진 상태에서 출발하는 아이디어 생각하기..(계속 시도)\n",
+    "for i in range(3, n+1):\n",
+    "    d[i] = (d[i-1] + d[i-2] * 2) % 796796\n",
+    "\n",
+    "print(d[n])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
